# space-diver

./: .clang-format  .gitignore  .gitmodules  README.md
.github/workflows/: colcon_test.yml
dynamixel_hardware/: CMakeLists.txt  dynamixel_hardware.xml  package.xml
dynamixel_hardware/config/: dynamixel_controllers.yaml  dynamixel_controllers_left_arm.yaml
dynamixel_hardware/include/dynamixel_hardware/: dynamixel_hardware.hpp
dynamixel_hardware/launch/: bring_up_on_hardware.launch.py
dynamixel_hardware/src/: dynamixel_hardware.cpp
floating_robot_controller/: CMakeLists.txt  package.xml
floating_robot_controller/include/floating_robot_controller/: client_example.hpp  end_effector_trajectory_controller.hpp  fixed_base_end_eff_traj_controller.hpp  trajectory.hpp
floating_robot_controller/launch/: rviz.launch.py
floating_robot_controller/model/: example.urdf  example_3dof.urdf
floating_robot_controller/src/: client_example.cpp  end_effector_trajectory_controller.cpp  fixed_base_end_eff_traj_controller.cpp  main_controller.cpp  parallel_to_serial_joint_states.cpp  trajectory.cpp
floating_robot_interfaces/: CMakeLists.txt  package.xml
floating_robot_interfaces/action/: FollowEndEffectorTrajectory.action
floating_robot_interfaces/msg/: EndEffectorTrajectory.msg  EndEffectorTrajectoryPoint.msg
spacediver_command_interface/: CMakeLists.txt  package.xml
spacediver_command_interface/include/spacediver_command_interface/: spacediver_command_interface.hpp  visibility_control.h
spacediver_command_interface/src/: spacediver_command_interface.cpp  spacediver_command_interface_node.cpp
spacediver_command_interface/test/: unit_test_spacediver_command_interface.cpp
spacediver_ros2_control/: CMakeLists.txt  package.xml
spacediver_ros2_control/bringup/config/: dynamixel_controllers.yaml  spacediver_controllers.yaml  spacediver_single_arm_controllers.yaml
spacediver_ros2_control/bringup/launch/: bring_up_on_hardware.launch.py  gazebo.launch.py  h_spacediver.launch.py  rviz.launch.py  rviz2_urdf.launch.py  spacediver.launch.py  spacediver_gazebo.launch.py  spacediver_single_arm.launch.py
spacediver_ros2_control/bringup/worlds/: underwater.world
spacediver_ros2_control/config/: LF_config.yaml  LR_config.yaml  RF_config.yaml  RR_config.yaml
spacediver_ros2_control/description/gazebo/: spacediver_gazebo.xacro  spacediver_gazebo_ros2.xacro
spacediver_ros2_control/description/gazebo/models/: copy_meshes_to_gazebo.sh  spacediver.sdf.xacro  spacediver_single_arm.sdf.xacro
spacediver_ros2_control/description/gazebo/models/meshes/: Link_MISUMI_LNMS16-10-200.STL  Misumi_LNFTS10-P10-V10-L200-S50-W18-T9.STL  shoulder_plate.STL  upper_arm_driven_link.STL  upper_arm_driving_link.STL
spacediver_ros2_control/description/gazebo/world/: underwater.world
spacediver_ros2_control/description/gazebo/worlds/: underwater.world
spacediver_ros2_control/description/ros2_control/: spacediver_ros2_control.xacro  spacediver_single_arm_ros2_control.xacro
spacediver_ros2_control/description/rviz/: simple_config.rviz  spacediver_config.rviz
spacediver_ros2_control/description/urdf/: spacediver.urdf.xacro  spacediver_dual_arm.urdf.xacro  spacediver_single_arm.urdf.xacro  target.urdf.xacro
spacediver_ros2_control/description/urdf/macros/: properties.xacro
spacediver_ros2_control/description/urdf/parts/: simple_left_arm.xacro  spacediver_base.xacro  spacediver_left_arm.xacro  spacediver_right.xacro  spacediver_right_arm.xacro
