<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>floating_robot_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="uchida.akiyoshi.s3@dc.tohoku.ac.jp">akiyoshi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>spacedyn_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>action_msgs</depend>
  <depend>ament_cmake</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>floating_robot_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
